# biox-biohackathon-2026

./: .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
archive/legacy-backend/server/: main.py
archive/legacy-frontend/frontend/: package.json
archive/legacy-frontend/frontend/src/: App.jsx
archive/streamlit_app/: requirements.txt  utils.py
backend/: __init__.py  errors.py  main.py  pyproject.toml  schemas.py  service.py
backend/services/: llm.py  optimization.py  orchestration.py  simulation.py  storage.py
docs/: ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json
frontend/public/mock/: biox_tuning_results.json
frontend/src/: App.vue  styles.css
frontend/src/components/: AppCardShell.vue  CandidatesPanel.vue  DiagnosticsPanel.vue  ErrorBanner.vue  HeroSection.vue  ManualEvaluationPanel.vue  ModePanel.vue  ModeStage.vue  SummaryPanel.vue  SummaryStage.vue  UploadPanel.vue  UploadStage.vue  WorkspaceStage.vue
scripts/: test_carveme.sh
src/test/: find_recipe.py  gem_loader.py  test_media.py  test_media_compare.py  test_media_simple.py
src/utils/: apply_media.py  evaluates.py  run_carveme.py  tune_media.py
streamlit_app/: .gitignore  README.md  app.py  apply_media.py  flux_viz.py  gem_builder.py  optimizer.py  parser.py  run_carveme.py  utils.py
tests/: test_optimizer.py  test_parser.py
