[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mediaopt"
version = "0.1.0"
description = "Media optimization MVP for filamentous fungi using CarveMe, COBRApy, and pFBA"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "carveme>=1.5.2",
  "cobra>=0.26",
  "pandas>=2.2",
  "numpy>=1.26",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1",
  "ruff>=0.3",
  "mypy>=1.9",
  "httpx>=0.27"
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = false
ignore_missing_imports = true
